--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
     "brazilian-values": "^0.12.0",
+    "chart.js": "^3.9.1",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-currency-input-field": "^3.6.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.0.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
