implantação do gráfico

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pesquisa-salario",
+  "homepage": "https://gabriellgomess.com/pesquisa/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,16 +14,21 @@
     "axios": "^1.1.2",
     "brazilian-values": "^0.12.0",
     "chart.js": "^3.9.1",
+    "collect.js": "^4.34.3",
+    "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-currency-input-field": "^3.6.5",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-hook-form": "^7.37.0",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.0.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-vis": "^1.11.7",
+    "recharts": "^2.1.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
