--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.36.0",
     "axios": "^1.1.2",
     "brazilian-values": "^0.12.0",
     "chart.js": "^3.9.1",
@@ -18,6 +19,7 @@
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^4.3.1",
     "react-currency-input-field": "^3.6.5",
     "react-dom": "^18.2.0",
