--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
     "@testing-library/jest-dom": "^5.16.5",
@@ -29,6 +30,7 @@
     "react-number-format": "^5.0.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "react-vis": "^1.11.7",
     "recharts": "^2.1.15",
     "web-vitals": "^2.1.4"
