ajustes nas rotas

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pesquisa-salario",
-  "homepage": "https://gabriellgomess.com/pesquisa/",
+  "homepage": "https://gabriellgomess.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
